--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": "^7.1",
-    "vovan-ve/lr0-parser": "v1.5.x-dev"
+    "vovan-ve/lr0-parser": "~1.5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0"
