--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,10 @@
   "minimum-stability": "stable",
   "require": {
     "php": "^7.1",
-    "vovan-ve/lr0-parser": "~1.5.0"
+    "vovan-ve/lr0-parser": "~1.5.3"
   },
   "require-dev": {
+    "ext-json": "*",
     "phpunit/phpunit": "^7.0"
   },
   "autoload": {
